crates/openhwp_parser/src/body/tests/snapshots/openhwp_parser__body__tests__officially_distributed_hwp_5_0_format-2.snap
---
source: crates/openhwp_parser/src/body/tests/mod.rs
expression: pseudo
---
[
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    60,
    159,
    159,
    159,
    159,
    159,
    159,
    159,
    159,
    159,
    159,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    236,
    175,
    175,
    134,
    134,
    134,
    134,
    134,
    134,
    134,
    134,
    134,
    76,
    76,
    76,
    76,
    76,
    76,
    76,
    165,
    165,
    165,
    165,
    165,
    165,
    165,
    165,
    165,
    165,
    165,
    165,
    165,
    165,
    249,
    249,
    249,
    249,
    249,
    249,
    249,
    249,
    249,
    249,
    249,
    22,
    22,
    22,
    22,
    22,
    22,
    19,
    19,
    19,
    19,
    19,
    19,
    19,
    19,
    19,
    19,
    19,
    19,
    47,
    47,
    47,
    47,
    47,
    47,
    47,
    47,
    47,
    47,
    47,
    47,
    47,
    47,
    47,
    190,
    190,
    190,
    190,
    190,
    190,
    190,
    190,
    98,
    98,
    31,
    31,
    31,
    31,
    18,
    18,
    18,
    18,
    18,
    18,
    18,
    18,
    18,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    164,
    164,
    164,
    164,
    164,
    164,
    164,
    164,
    164,
    164,
    164,
    164,
    164,
    164,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    218,
    218,
    218,
    218,
    218,
    218,
    20,
    20,
    20,
    20,
    20,
    20,
    20,
    20,
    92,
    92,
    92,
    92,
    92,
    92,
    92,
    92,
    92,
    92,
    92,
    92,
    92,
    92,
    170,
    170,
    170,
    170,
    170,
    170,
    170,
    152,
    152,
    152,
    152,
    44,
    44,
    44,
    44,
    44,
    44,
    44,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    204,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    245,
    97,
]
