crates/openhwp_parser/src/body/tests/snapshots/openhwp_parser__body__tests__officially_distributed_hwp_5_0_format-3.snap
---
source: crates/openhwp_parser/src/body/tests/mod.rs
expression: hash_code
---
[
    55,
    0,
    68,
    0,
    55,
    0,
    53,
    0,
    53,
    0,
    57,
    0,
    69,
    0,
    54,
    0,
]
